--- a/main.html
+++ b/main.html
@@ -4,13 +4,36 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		table,th,td{
+			border:1px solid black;
+			border-collapse:collapse;
+		}
+	</style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<table>
+		<thead>
+		<tr>
+			<th>rollnumber</th>
+			<th>name</th>
+		</tr>
+		<tr>
+			<td>35</td>
+			<td>harshita</td>
+		</tr>
+		<tr>
+			<td>30</td>
+			<td>
+				chetana priya
+			</td>
+		</tr>
+		</thead>
+	</table>
 </body>
 
 </html>
