--- a/main.html
+++ b/main.html
@@ -4,19 +4,19 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-	<style>
+<!-- 	<style>
 		table,th,td{
 			border:1px solid black;
 			border-collapse:collapse;
 		}
-	</style>
+	</style> -->
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<table>
+	<table border="1" cellspacing="0" cellpadding="6">
 		<thead>
 		<tr>
 			<th>rollnumber</th>
