--- a/main.html
+++ b/main.html
@@ -22,6 +22,8 @@
 			<th>rollnumber</th>
 			<th>name</th>
 		</tr>
+		</thead>
+		<tbody>
 		<tr>
 			<td>35</td>
 			<td>harshita</td>
@@ -32,7 +34,8 @@
 				chetana priya
 			</td>
 		</tr>
-		</thead>
+			</tbody>
+		
 	</table>
 </body>
 
